Updated report after review

--- a/Capstone Project Report Formatted.ipynb
+++ b/Capstone Project Report Formatted.ipynb
@@ -134,7 +134,6 @@
     "sns.set(style=\"ticks\")\n",
     "seed=42\n",
     "np.random.seed(seed)\n",
-    "#np.random.seed(sum(map(ord, \"axis_grids\")))\n",
     "pd.options.display.max_columns = 20"
    ]
   },
@@ -1542,17 +1541,31 @@
     "\n",
     "The first algorithm used is a simple linear regression. This is a linear approach for modelling the relationship between the features in the data set (e.g. no. of rooms, no. of guests accommodated) and the target 'yield' variable.\n",
     "\n",
-    "This is used to first establish a baseline model that we can then seek to improve on.\n",
+    "The features are the x values, which is assigned a coefficient. There is also an additional degree of freedom (the intercept). The x values and the intercept equates to the y value. In a simple regression problem with single x and single y, the equation of the model is:\n",
+    "\n",
+    "y = B0 + B1*x\n",
+    "\n",
+    "In this scikit-learn implementation, the linear regression algorithm assigns the coefficients using the Ordinary Least Squares procedure. This works by calculating the distance from each data point to the regression line, square it and sum all of the squared errors together. This is the residual sum of squares between the x and y values that the algorithm seeks to minimise.\n",
+    "\n",
+    "This algorithm is used to first establish a baseline model that we can then seek to improve on.\n",
     "\n",
     "**2.\tDecision Tree**\n",
     "\n",
-    "The second algorithm is a Decision Tree algorithm. This is a more complex tree-based model that can capture nonlinear relationships in the dataset whilst still retaining interpretability.\n",
+    "The second algorithm is a Decision Tree algorithm. This is a more complex tree-based model that can capture nonlinear relationships in the dataset whilst still retaining interpretability. It is also robust to missing values, and has the added advantage of being able to help with feature selection based on feature importance. \n",
     "\n",
-    "It is also robust to missing values, and has the added advantage of being able to help with feature selection based on feature importance. \n",
+    "The model uses a tree representation, where each internal node of the tree corresponds to a feature (X variable) and each leaf node is a class label. For numerical features, the classes are first discretized. \n",
+    "\n",
+    "To learn the decision rules, this scikit-learn implementation uses the criterion of Information Gain. This borrows from Information Theory, and estimates the amount of information in each attribute. Information gain is calculated by first measuring the mean squared error using each attribute, and then calculated the expected reduction in error by  using the attribute as a node split. The attributes with the highest information gain is placed as the root node, with subsequent nodes placed according to information gain until the final tree is formed.\n",
     "\n",
     "**3.\tRandom Forest**\n",
     "\n",
-    "This is the most complex ensemble model built from decision trees, and should be able to provide additional accuracy. While it sacrifices interpretability, sense checking can be made with the earlier decision tree model whilst added an interpretation layer using Tree Interpreter allows model users to break down individual predictions."
+    "This is the most complex ensemble model built from decision trees, and should be able to provide additional accuracy. While it sacrifices interpretability, sense checking can be made with the earlier decision tree model, using sensitivity analysis and analysing feature importances.\n",
+    "\n",
+    "The principle behind this ensemble model is that a group of weak learners, the individual decision trees, can be used together to create one strong leaner - the Random Forest model.\n",
+    "\n",
+    "To build the ensemble model of decision trees, a random sample of N cases are taken to build each tree T. At each node of tree T, a random number of predictor variables M is selected. The variable with the best split, in this instance based on MSE, is used. This process is repeated for each node split with a new random set of M predictor variables.\n",
+    "\n",
+    "Once all the trees in the model have been built, new inputs are run down each of the trees with each tree having its own results. The results are then averaged to return the overall result for the random forest model."
    ]
   },
   {
@@ -1979,6 +1992,19 @@
     "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, rf_y_pred))\n",
     "# Explained variance score: 1 is perfect prediction\n",
     "print('Variance score: %.2f' % r2_score(y_test, rf_y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Complications\n",
+    "\n",
+    "While building this pipeline, one complication that occured was the inherent stochasticity of the LDA topic modelling algorithm. As a Bayesian model, the LDA model uses a posterior probability distribution over the random vectors of topics. This causes different runs of training the LDA algorithm on the same corpus can result in different topics and term frequencies.\n",
+    "\n",
+    "To reduce this variability, one method is to increase the number of training runs (which needs to be offset against increased training time) to help the model converge on the same results. By increasing the training passes to 10 from an initial 1, I found that the topics produced were much more consistent. Reducing the number of topics used also helps the model converge on a smaller set of topics.\n",
+    "\n",
+    "For reproducibility, np.random.seed can be used to set the same seed each time inference is performed. However, increasing the number of passes is still important otherwise the resulting topic models will be sensitive to the seed set. "
    ]
   },
   {
