Updated citation for missing values imputer

--- a/Capstone Project Report Formatted.ipynb
+++ b/Capstone Project Report Formatted.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-12T19:02:02.007272Z",
@@ -1070,6 +1070,8 @@
    },
    "outputs": [],
    "source": [
+    "#Missing values imputer from https://gist.github.com/EricTing/7353d70198a3a09d1220\n",
+    "\n",
     "from sklearn.base import TransformerMixin\n",
     "\n",
     "class DataFrameImputer(TransformerMixin):\n",
@@ -2678,7 +2680,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
